# spider-rs-crawler

./: .env  .gitignore  BUILD.bazel  Cargo.toml  Cargo.toml_20260315_001  MODULE.bazel  README.md  WORKSPACE  WORKSPACE_20260317_002  run_crawler.sh  部署使用说明Reademe.md
bazel_local_modules/rules_python-1.0.0/python/: features.bzl
bazel_local_modules/rules_rust-v0.48.0/crate_universe/private/: urls.bzl
config/: crawler.yaml  prometheus.yaml
deploy/: Dockerfile  docker-compose.yml
deploy/k8s/: configmap.yaml  cronjob.yaml
downloads/163mail/: https%3A%2F%2Fmail.163.com%2F.html  https%3A%2F%2Fmail.163.com%2Fdashi%2Fhelp.html.html  https%3A%2F%2Fmail.163.com%2Fhtml%2Faccounts-repai.html  https%3A%2F%2Fmail.163.com%2Fhtml%2Fagreement%2Fdo.html  https%3A%2F%2Fmail.163.com%2Fhtml%2Ffeedback%2F.html  https%3A%2F%2Fmail.163.com%2Fhuodong%2Fweb%2F64acf.html  https%3A%2F%2Fmail.163.com%2Fhuodong%2Fweb%2F64c8d.html  https%3A%2F%2Fmail.163.com%2Fjs6%2Fmain.jsp.html  https%3A%2F%2Fmail.163.com%2Fprojects%2Fdashi-docs.html  https%3A%2F%2Fmail.163.com%2Fprojects%2Fsafety-web.html  https%3A%2F%2Fmail.163.com%2Fregister%2Findex.htm%.html  https%3A%2F%2Fmail.163.com%2Fspecial%2Fweb%2F66136.html  https%3A%2F%2Fmail.163.com%2Fspecial%2Fweb%2F676d1.html
scripts/: build.sh  build2.sh  build_bak.sh  run.sh
src/: config.rs  main.rs  main.rs_20260317_001  main.rs_20260317_002  main.rs_20260317_003
src/crawl/: data_processor.rs  mod.rs  website_builder.rs
src/login/: chrome_login.rs  chrome_login.rs_20260317_001  cookie_store.rs  cookie_store.rs_20260317_001  mod.rs
src/monitor/: logger.rs  metrics.rs  mod.rs
src/storage/: minio.rs  minio.rs2  mod.rs  redis.rs
