[package]
name = "spider-enterprise-crawler"
version = "2.47.22"
edition = "2021"
description = "Enterprise crawler based on spider-rs v2.45 with login support"
license = "MIT"

[dependencies]
spider = { version = "=2.47.35", features = [
  "chrome",
  #"chrome_headed",
  #"chrome_stealth",  # 反爬（替代原stealth）
  #"cookies",         # Cookie处理（替代原cookie）
  #"sync",            # 同步支持
  "tokio_io_std",    # Tokio异步IO（替代原tokio-runtime）
  "tracing"
] }
# 新增：解析.env文件
dotenv = "0.15"
cookie = "0.18.1"
time = { version = "0.3", features = ["serde", "local-offset"] } # ✅ 新增：处理时间转换
# 异步运行时
tokio = { version = "1.0", features = ["full", "process"] }
# 配置管理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
config = "0.14"
# 存储依赖
redis = { version = "0.25.4", features = ["tokio-comp", "serde"] }
# minio = { version = "0.3.0", features = ["tokio"] }
minio = { version = "0.3.0" }
# 监控告警
# prometheus = { version = "0.14.0", features = ["tokio"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# 工具依赖
anyhow = "1.0"
thiserror = "1.0"
# 显式添加reqwest（确保链接）
reqwest = { version = "0.11.22", features = ["cookies", "json", "multipart"], default-features = false }
http = "0.2.12" # 与spider依赖的http版本一致
hyper = { version = "1.8.1", features = ["full"] }
# 新增：URL编码（避免文件名非法字符）
urlencoding = "2.1.3" 
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# 必须添加的正则+懒加载依赖（解决所有E0432/E0433错误）
regex = "1.10.3"
lazy_static = "1.4.0"
chromiumoxide = "0.9.1"
# 真实浏览器核心依赖（关键！）
headless_chrome = "1.0.21"
#chromiumoxide = "0.5.0"  # 新增：解决截图枚举依赖
